// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Following gets all user liked content 1`] = `
Object {
  "data": Object {
    "likedContent": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
            "isLiked": true,
          },
        },
      ],
    },
  },
}
`;

exports[`Following likes a node 1`] = `
Object {
  "data": Object {
    "updateLikeEntity": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": true,
    },
  },
}
`;

exports[`Following likes an entity 1`] = `
Object {
  "data": Object {
    "updateLikeEntity": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": true,
    },
  },
}
`;

exports[`Following returns a likeCount 1`] = `
Object {
  "data": Object {
    "node": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "likedCount": 1,
    },
  },
}
`;

exports[`Following returns an empty array for liked content without a user logged in 1`] = `
Object {
  "data": Object {
    "likedContent": Object {
      "edges": Array [],
    },
  },
}
`;

exports[`Following returns isLiked false if a user is logged out 1`] = `
Object {
  "data": Object {
    "node": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": false,
    },
  },
}
`;

exports[`Following unlikes an entity 1`] = `
Object {
  "data": Object {
    "updateLikeEntity": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": false,
    },
  },
}
`;

exports[`Following uses following cache to track if a user liked content, if present 1`] = `
Object {
  "data": Object {
    "node": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": false,
    },
  },
}
`;

exports[`Following uses following cache to track if a user liked content, if present 2`] = `
Array [
  Array [
    Object {
      "key": Array [
        "userLiked",
        "someId",
        201,
        "1",
      ],
    },
  ],
]
`;

exports[`Following uses following table to track if a user liked content 1`] = `
Object {
  "data": Object {
    "node": Object {
      "id": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "isLiked": true,
    },
  },
}
`;

exports[`Following uses following table to track if a user liked content 2`] = `
Array [
  Array [
    Object {
      "data": true,
      "key": Array [
        "userLiked",
        "someId",
        201,
        "1",
      ],
    },
  ],
]
`;
